feat: attempting to fix colours on light mode

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     />
     <title>Ashleigh Simonelli</title>
   </head>
-  <body>
+  <body class="theme-dark">
     <form name="contact" netlify="true" netlify-honeypot="bot-field" hidden>
       <input type="hidden" value="contact" name="form-name" />
       <input type="text" name="name" />
