feat: refactoring and added more statement pieces

--- a/index.html
+++ b/index.html
@@ -7,16 +7,29 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <title>Ashleigh Simonelli</title>
+    <title>Ashleigh Simonelli | Software Engineer</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "image": "/images/ashleigh.jpg",
+        "jobTitle": "Platform Applications Principal Engineer, Manager",
+        "name": "Ashleigh Simonelli",
+        "birthPlace": "Rochford, Essex",
+        "birthDate": "1992-03-5",
+        "gender": "female",
+        "nationality": "British",
+        "url": "http://www.ashleighsimonelli.co.uk"
+      }
+    </script>
+    <meta name="description" content="Ashleigh is a Software Engineer with over 10 years of experience in the workplace. Her Portfolio website is a showcase of what a backend developer can achieve with a bit of creativity, showcasing the media from the 80s and 90s that influenced her into becoming a web developer." />
+    <meta name="keywords" content="" />
+    <meta name="authors" content="Ashleigh Simonelli" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
   </head>
   <body class="theme-dark">
-    <form name="contact" netlify="true" netlify-honeypot="bot-field" hidden>
-      <input type="hidden" value="contact" name="form-name" />
-      <input type="text" name="name" />
-      <input type="email" name="email" />
-      <textarea name="message"></textarea>
-    </form>
     <div id="root"></div>
     <script type="module" src="src/index.tsx"></script>
+    <!-- <script type="text/javascript" src="https://js-dos.com/cdn/js-dos-api.js"></script> -->
   </body>
 </html>
