fix: corrected preload image

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
     
     <!-- Preload critical resources -->
-    <link rel="preload" href="/images/monitor.png" as="image" />
+    <link rel="preload" href="/images/monitor.webp" as="image" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     
